ProyectoTerminado//FALTA IMAGENES GIF SONIDOS

--- a/ProyectoFinal/src/proyectofinalpoo/Principal.form
+++ b/ProyectoFinal/src/proyectofinalpoo/Principal.form
@@ -25,7 +25,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jtblScore" pref="1102" max="32767" attributes="0"/>
+              <Component id="jtblMonopolyPrincipal" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -34,14 +34,14 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jtblScore" max="32767" attributes="0"/>
+              <Component id="jtblMonopolyPrincipal" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JTabbedPane" name="jtblScore">
+    <Container class="javax.swing.JTabbedPane" name="jtblMonopolyPrincipal">
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
       <SubComponents>
@@ -57,19 +57,34 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="-2" pref="127" max="-2" attributes="0"/>
+                      <Component id="jtxtJ1" min="-2" pref="139" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="147" max="-2" attributes="0"/>
+                      <Component id="jbtnNombreConfirma" min="-2" pref="174" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="jtxtJ2" min="-2" pref="139" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="220" max="-2" attributes="0"/>
+                  </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jScrollPane1" pref="1090" max="32767" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="jScrollPane1" min="-2" pref="1072" max="-2" attributes="0"/>
+                      <EmptySpace pref="63" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jScrollPane1" pref="697" max="32767" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jtxtJ1" alignment="3" min="-2" pref="57" max="-2" attributes="0"/>
+                          <Component id="jtxtJ2" alignment="3" min="-2" pref="57" max="-2" attributes="0"/>
+                          <Component id="jbtnNombreConfirma" alignment="3" min="-2" pref="57" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="jScrollPane1" min="-2" pref="412" max="-2" attributes="0"/>
+                      <EmptySpace pref="176" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -85,12 +100,41 @@
                 <Component class="javax.swing.JTextArea" name="jTextArea1">
                   <Properties>
                     <Property name="columns" type="int" value="20"/>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Comic Sans MS" size="24" style="0"/>
+                    </Property>
                     <Property name="rows" type="int" value="5"/>
-                    <Property name="text" type="java.lang.String" value="Suma&#xa;Resta&#xa;Multiplicacion&#xa;Division"/>
+                    <Property name="text" type="java.lang.String" value="El juego consiste en varias preguntas que constaran de unos enciados donde estudiaremos &#xa;temas importantes como la suma, una operaci&#xf3;n b&#xe1;sica que combina cantidades para obtener &#xa;un total, y la resta, que consiste en encontrar la diferencia entre n&#xfa;meros. Tambi&#xe9;n &#xa;aprenderemos sobre la multiplicaci&#xf3;n, una forma r&#xe1;pida de sumar grupos iguales, y la divisi&#xf3;n, &#xa;que nos ayuda a repartir cantidades en partes equitativas. Adem&#xe1;s, exploraremos la &#xa;fascinante historia del Per&#xfa;, desde sus antiguas civilizaciones como los incas hasta su &#xa;desarrollo en la &#xe9;poca colonial y republicana, conociendo sus grandes logros y desaf&#xed;os. &#xa;Por &#xfa;ltimo, profundizaremos en la geograf&#xed;a peruana, analizando sus tres regiones naturales &#xa;costa, sierra y selva, sus recursos, climas y las principales ciudades que conforman este &#xa;diverso pa&#xed;s. Estos temas nos dar&#xe1;n una base s&#xf3;lida tanto en matem&#xe1;ticas como en el &#xa;conocimiento de nuestro pa&#xed;s."/>
                   </Properties>
                 </Component>
               </SubComponents>
             </Container>
+            <Component class="javax.swing.JTextField" name="jtxtJ1">
+              <Properties>
+                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                  <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
+                    <TitledBorder title="Jugador1"/>
+                  </Border>
+                </Property>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JTextField" name="jtxtJ2">
+              <Properties>
+                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                  <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
+                    <TitledBorder title="Jugador2"/>
+                  </Border>
+                </Property>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JButton" name="jbtnNombreConfirma">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Confirmar"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnNombreConfirmaActionPerformed"/>
+              </Events>
+            </Component>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="jpanelMonopoly">
@@ -153,7 +197,7 @@
                               <Component id="jlblNumeroDado" min="-2" pref="41" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace pref="124" max="32767" attributes="0"/>
+                      <EmptySpace pref="163" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -524,7 +568,7 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="1102" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="1141" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
@@ -534,7 +578,7 @@
             </DimensionLayout>
           </Layout>
         </Container>
-        <Container class="javax.swing.JPanel" name="jPanel4">
+        <Container class="javax.swing.JPanel" name="jPanelScore">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
               <JTabbedPaneConstraints tabName="Score">
@@ -546,15 +590,61 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="1102" max="32767" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="-2" pref="277" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="jlblPuntos1" pref="300" max="32767" attributes="0"/>
+                          <Component id="jlblResultado1" max="32767" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jlblResultado2" min="-2" pref="300" max="-2" attributes="0"/>
+                          <Component id="jlblPuntos2" min="-2" pref="300" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="197" max="32767" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="709" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="275" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="jlblPuntos1" min="-2" pref="120" max="-2" attributes="0"/>
+                          <Component id="jlblPuntos2" min="-2" pref="111" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="jlblResultado1" pref="111" max="32767" attributes="0"/>
+                          <Component id="jlblResultado2" max="32767" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="177" max="32767" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
           </Layout>
+          <SubComponents>
+            <Component class="javax.swing.JLabel" name="jlblPuntos1">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Primer Puesto"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="jlblResultado1">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="GANADOR"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="jlblPuntos2">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Segundo Puesto"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="jlblResultado2">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="jLabel1"/>
+              </Properties>
+            </Component>
+          </SubComponents>
         </Container>
       </SubComponents>
     </Container>
